# libvtf

./: meson.build
VTFCmd/: meson.build
VTFLib/: MemoryReader.cpp  MemoryWriter.cpp  VMTFile.cpp  VTFFile.cpp  VTFFile.h  meson.build
lib/: VTFLib.h  meson.build
